@@ -166,9 +166,9 @@ rsvg_paint_server_lin_grad_render (RsvgPaintServer *self, ArtRender *ar,
 	double affine[6];
 	guint32 current_color;
 	int i;
-	float xchange, ychange, pointlen,unitlen;
-	float nx2, ny2;
-	float x0, y0;
+	double xchange, ychange, pointlen,unitlen;
+	double nx2, ny2;
+	double x0, y0;
 
 	agl = z->agl;
 	if (agl == NULL)
@@ -241,7 +241,7 @@ rsvg_paint_server_lin_grad_render (RsvgPaintServer *self, ArtRender *ar,
 
 	/* workaround for an evil devide by 0 bug - not sure if this is sufficient */
 	if (fabs(dx) + fabs(dy) <= 0.0000001)
-		scale = 0.;
+		scale = 100000000.;
 	else
 		scale = 1.0 / (dx * dx + dy * dy);
 	agl->a = dx * scale;
@@ -385,12 +385,6 @@ render_image_pattern_render(ArtRenderCallback *self, ArtRender *render,
 	int x1 = render->x1;
 
 	int sx, sy;
-	/*
-	guchar pix[4];
-	guchar newpix[4];
-	int j;
-	double  gbnx, gbny;
-	*/
 	double px, py, gx, gy, gnx, gny, tx, ty;
 
 	tx = -z->x * z->affine[0] + -z->y * z->affine[2] + z->affine[4];
@@ -403,32 +397,6 @@ render_image_pattern_render(ArtRenderCallback *self, ArtRender *render,
 			
 			gx = px * z->invaffine[0] + py * z->invaffine[2] + z->invaffine[4] - z->x;
 			gy = px * z->invaffine[1] + py * z->invaffine[3] + z->invaffine[5] - z->y;
-			/*	
-			  gbnx = floor (gx / z->width);
-			  gbny = floor (gy / z->height);
-			  
-			  pix[0] = pix[1] = pix[2] = pix[3] = 0;
-			  
-			  for (gny = gbny - 3; gny < gbny + 3; gny++) {
-			  for (gnx = gbnx - 3; gnx < gbnx + 3; gnx++) {
-			  sx = px - gnx * z->width * z->affine[0] - gny * z->height * z->affine[2] - z->affine[4]
-			  + z->xoffset + tx;
-			  sy = py - gnx * z->width * z->affine[1] - gny * z->height * z->affine[3] - z->affine[5]
-			  + z->yoffset + ty;
-			  
-			  if (sx < 0 || sx >= z->realwidth || sy < 0 || sy >= z->realheight)
-			  continue;
-			  newpix[0] = z->pixels[sx * 4 + z->rowstride * sy];
-			  newpix[1] = z->pixels[sx * 4 + z->rowstride * sy + 1];
-			  newpix[2] = z->pixels[sx * 4 + z->rowstride * sy + 2];
-			  newpix[3] = z->pixels[sx * 4 + z->rowstride * sy + 3];
-			  art_rgba_run_alpha (pix, newpix[0], newpix[1], 
-			  newpix[2], newpix[3], 1);
-			  }
-			  }
-			  for (j = 0; j < 4; j++)
-			  render->image_buf[i * 4 + j] = newpix[j];
-			  */
 			
 			gnx = floor (gx / z->width);
 			gny = floor (gy / z->height);
